--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,14 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.3.7",
+    "@apollo/react-hooks": "^4.0.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@stripe/stripe-js": "^1.17.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-context": "^1.0.20",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
